# 370

./: LICENSE  README.md
assignment/: CMakeLists.txt  main.c  p.c  tmp.c
exercises/C2/: ProdConWithCondition.c  ex1.c  ex2.c
exercises/C3/: CMakeLists.txt  caged_bird.txt  main.c
exercises/omp/: CMakeLists.txt  main.cpp
exercises/wk_1/1/c/: CMakeLists.txt  ex1  ex1.c  ex2  ex2.c  ex3.c
exercises/wk_1/1/python/: ex1.py  ex2.py
